+ Chỉnh lại khi xóa event sẽ trở về trang show event tổng + Validate các trang , còn trang voting chưa làm

--- a/Capstone-Project-EIP/CapstoneProjectAdmin/Views/Account/Login.cshtml
+++ b/Capstone-Project-EIP/CapstoneProjectAdmin/Views/Account/Login.cshtml
@@ -1,7 +1,7 @@
 ﻿@using CapstoneProjectAdmin.Models
 @model LoginViewModel
 @{
-    ViewBag.Title = "Log in";
+    ViewBag.Title = "Join.vn";
     Layout = null;
 }
 
