--- a/Capstone-Project-EIP/CapstoneProjectAdmin/Views/Home/Index.cshtml
+++ b/Capstone-Project-EIP/CapstoneProjectAdmin/Views/Home/Index.cshtml
@@ -153,7 +153,7 @@
                                     type: "success",
                                     confirmButtonText: "OK"
                                 }, function () {
-                                    window.location.href = "http://localhost:61628/";
+                                    window.location.href = '@Url.Action("Index","Events")';
                                 });
                             }
                             else {
